src/components/ContentContainer/content-container.css
.container-component {
	display: grid;
	grid-template-rows: 40px auto;
	grid-template-columns: 50px auto;
}

.container-component > .title {
	grid-column-start: 2;
	grid-column-end: 3;
	grid-row-start: 1;
	grid-row-end: 2;
	display: flex;
	align-items: center;
}

.container-component > .decoration {
	grid-row-start: 2;
	grid-row-end: 3;
	grid-column-start: 1;
	grid-column-end: 2;
}

.container-component > .logo-container {
	grid-row-start: 1;
	grid-row-end: 2;
	grid-column-start: 1;
	grid-column-end: 2;
	text-align: center;
	font-size: 2em;
	color: var(--secondary-color);
}

.container-component > .verticle-line {
	grid-row-start: 2;
	grid-row-end: 3;
	grid-column-start: 1;
	grid-column-end: 2;
	border-right: 1px dotted var(--secondary-color);
	height: 100%;
	width: 50%;
}

.container-component > .content {
	grid-row-start: 2;
	grid-row-end: 3;
	grid-column-start: 2;
	grid-column-end: 3;
	justify-self: start;
}

